greetings-service/src/main/fabric8/route.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: fuse-spring-boot-circuit-breaker-greeting
    provider: fabric8
    version: "1"
    group: io.openshift.booster
  name: fuse-spring-boot-circuit-breaker-greeting
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: greetings-service
